# kmmon

./: .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
docs/: keyboard.md  mcap-metadata.md  mouse.md
src/: capture.rs  main.rs  mcap_writer.rs  processor.rs  uploader.rs  ws_server.rs
